// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductsGridView component renders correctly when empty 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    MC: plp.product.noResultsFound
  </p>
</div>
`;

exports[`ProductsGridView component renders correctly when not empty 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 Grid-item css-xrsztz-MuiGrid2-root"
    data-testid="grid-item"
  >
    <div
      class=" ColorPair-white css-963r91"
      data-testid="tappable-card-box"
    >
      <a
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","label":"MC: plp.product.viewDetails","action":"/no/name-code/?pathname=%2F"}"
        data-testid="tappable-card-main"
        href="/no/name-code/?pathname=%2F"
        tabindex="0"
      >
        <img
          alt=" name"
          class="TappableCard-headerPicture TappableCard-contain css-11fi03y-Media"
          data-testid="tappable-card-media"
          src="http://localhost:8000"
        />
        <div
          class="TappableCard-body css-c6k36h"
        >
          <div
            class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
            data-testid="tappable-card-body-brand-logo"
          />
          <h5
            class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
            data-testid="tappable-card-body-title"
          >
            name
          </h5>
          <div
            class="TappableCard-text"
            data-testid="tappable-card-body-description"
          >
            <p
              class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
              data-testid="product-overview-card-footer-description"
            >
              short-description
            </p>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
      <div
        class="TappableCard-footer css-1rg9dq1"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1c5pucp-MuiTypography-root-MuiLink-root"
          data-gtm="{"id":"cta-click1","label":"MC: plp.product.viewDetails","action":"/no/name-code/?pathname=%2F"}"
          data-testid="anchor-link"
          href="/no/name-code/?pathname=%2F"
        >
          MC: plp.product.viewDetails
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vtibze-MuiSvgIcon-root"
            data-testid="internal"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductsGridView component renders correctly when not empty with filters from url 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 Grid-item css-xrsztz-MuiGrid2-root"
    data-testid="grid-item"
  >
    <div
      class=" ColorPair-white css-963r91"
      data-testid="tappable-card-box"
    >
      <a
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","label":"MC: plp.product.viewDetails","action":"/no/name-code/?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query"}"
        data-testid="tappable-card-main"
        href="/no/name-code/?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query"
        tabindex="0"
      >
        <img
          alt=" name"
          class="TappableCard-headerPicture TappableCard-contain css-11fi03y-Media"
          data-testid="tappable-card-media"
          src="http://localhost:8000"
        />
        <div
          class="TappableCard-body css-c6k36h"
        >
          <div
            class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
            data-testid="tappable-card-body-brand-logo"
          />
          <h5
            class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
            data-testid="tappable-card-body-title"
          >
            name
          </h5>
          <div
            class="TappableCard-text"
            data-testid="tappable-card-body-description"
          >
            <p
              class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
              data-testid="product-overview-card-footer-description"
            >
              short-description
            </p>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
      <div
        class="TappableCard-footer css-1rg9dq1"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1c5pucp-MuiTypography-root-MuiLink-root"
          data-gtm="{"id":"cta-click1","label":"MC: plp.product.viewDetails","action":"/no/name-code/?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query"}"
          data-testid="anchor-link"
          href="/no/name-code/?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query"
        >
          MC: plp.product.viewDetails
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vtibze-MuiSvgIcon-root"
            data-testid="internal"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
